[package]
name = "pssstt"
authors = ["vats", "clint"]
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.133"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["serde", "v4", "fast-rng"] }
zmq = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }
